--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,21 @@
 .home{
-    background-color: aqua;
+    background-color: rgb(32, 133, 201);
+    
     .title{
-        font-size: 5rem;
+        font-size: 2rem;
+        font-weight: bold;
         color: rgb(26, 27, 27);
     }
+    display: flex;
+    .homeContainer{
+        background-color: rgb(36, 102, 99);
+        flex: 2;
+        .widgets{
+            display: flex;
+            padding: 20px;
+            gap: 20px;
+        }
+    }
+    
+
 }
